# dashboardWithDbt

./: README.md  config.yaml  dockerfile  pyproject.toml
app/: app.py
datawarehouse/app/: app.py
datawarehouse/models/example/: schema.yml
datawarehouse/models/example/bronze/: bronze_commodities.sql  bronze_movimentacao_commodities.sql  schema.yml
datawarehouse/models/example/silver/: schema.yml  silver_commodities.sql
datawarehouse/seeds/: movimentacao_commodities.csv
src/projeto_db4/: extract.load.py
